[package]
name = "wattpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "cookies"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_repr = "0.1.10"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
