[package]
name = "wattpad"
description = "Unofficial async Rust wrapper around the (various) Wattpad API(s)"
version = "0.1.2"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/Ruthenic/wattpad-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3

[dependencies]
anyhow = "1.0.69"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_repr = "0.1.10"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
